--- a/FloatingIslandsWebsite/index.html
+++ b/FloatingIslandsWebsite/index.html
@@ -33,7 +33,7 @@
             <div><img class="arrow" id="rightArrow" height="32px" src="images/RArrow.png">  </div>
         </div>
     </main>
-   
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
